--- a/ana.html
+++ b/ana.html
@@ -65,6 +65,14 @@
           <li>I try to hit as many nades as possible to prevent them from healing</li>
           <li>You gotta save sleep dart for ultimates or an annoying tracer tryna flank you.</li>
           <li>Nano is huge, the faster you get it, the better postion you'll be in later on.</li>
+
+            <pre>Anas plan:
+            Heal team
+                Look for anti-nade
+                      Sleep key ult
+                            Nano to start fights
+                            !pre
+            </pre>
         </ul>
       </section>
 
