--- a/genji.html
+++ b/genji.html
@@ -80,9 +80,10 @@
           a fight with his brother Hanzo, he was left near death and rebuilt as a cyborg.
           Over time, he learned to accept who he is and trained to find balance.
         </p>
-        <p>
-          I like his story because it is about improving and changing, not just being strong.
-        </p>
+            <blockquote cite="https://overwatch.blizzard.com/">
+                 "I will not be deterred."
+            </blockquote>
+            !blockquote and cite
       </section>
 
       <section class="card">
