--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         </nav>
       </div>
     </header>
-
+    <noscript>
+    <p class="note">This site works best with JavaScript enabled, but it still runs without it.</p>
+    </noscript>
+    !no script
     <main class="page">
       <section class="hero">
         <h1>Overwatch, My Favorite Game</h1>
